Product, Customer and Order return type and change Product id to long add Validation. add searchProduct and decreaseProductSizeQuantity, createOrder and Customer function, Corsconfig to FE and RedisConfig Cache