@@ -2,6 +2,7 @@ package com.projectshopbando.shopbandoapi.mappers;
 
 import com.projectshopbando.shopbandoapi.dtos.request.ProductCreateRequest;
 import com.projectshopbando.shopbandoapi.dtos.request.ProductSizeDTO;
+import com.projectshopbando.shopbandoapi.dtos.response.ProductCardRes;
 import com.projectshopbando.shopbandoapi.dtos.response.ProductResponse;
 import com.projectshopbando.shopbandoapi.entities.Product;
 import com.projectshopbando.shopbandoapi.entities.ProductImage;
@@ -12,6 +13,7 @@ import org.mapstruct.Mapping;
 import org.mapstruct.MappingTarget;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface ProductMapper {
@@ -22,12 +24,15 @@ public interface ProductMapper {
 
 
     @Mapping(target = "categoryId", source = "category.id")
-    @Mapping(target = "imageUrls", ignore = true)
-    @Mapping(target = "sizes", ignore = true)
+    @Mapping(target = "imageUrls", expression = "java(mapImages(product.getImageUrls()))")
+    @Mapping(target = "sizes", expression = "java(mapSizes(product.getSizes()))")
     ProductResponse toProductResponse (Product product);
 
+    ProductCardRes toProductCardRes(Product product);
 
+    List<ProductCardRes> toProductCardResList(List<Product> products);
 
+//    List<ProductResponse> toProductResponseList (List<Product> products);
 
     // After toProduct
     @AfterMapping
@@ -53,22 +58,18 @@ public interface ProductMapper {
         }
     }
 
-    @AfterMapping
-    default void transformRelations (@MappingTarget ProductResponse productResponse, Product product) {
-        if (product.getImageUrls() != null) {
-            List<String> img = product.getImageUrls().stream()
-                        .map(ProductImage::getUrl)
-                        .toList();
-            productResponse.setImageUrls(img);
-        }
-        if (product.getSizes() != null) {
-            List<ProductSizeDTO> sizes = product.getSizes().stream()
-                    .map(size -> ProductSizeDTO.builder()
-                            .size(size.getSize())
-                            .quantity(size.getQuantity())
-                            .build())
-                    .toList();
-            productResponse.setSizes(sizes);
-        }
+    default List<String> mapImages(List<ProductImage> images) {
+        return images == null ? null : images.stream()
+                .map(ProductImage::getUrl)
+                .collect(Collectors.toList());
+    }
+
+    default List<ProductSizeDTO> mapSizes(List<ProductSize> sizes) {
+        return sizes == null ? null : sizes.stream().map(size -> {
+            ProductSizeDTO dto = new ProductSizeDTO();
+            dto.setSize(size.getSize());
+            dto.setQuantity(size.getQuantity());
+            return dto;
+        }).collect(Collectors.toList());
     }
 }
